# aws-basics-1-link-shortener-rust

./: .gitignore  Cargo.toml  Makefile  docker-compose.yml
examples/: 200_generator.json  200_resolver.json
infrastucture/: lambda.tf  provider.tf
lambdas/link-generator/: Cargo.toml
lambdas/link-generator/src/: main.rs
lambdas/link-generator/src/generator/: mod.rs
lambdas/link-generator/src/store/: mod.rs
lambdas/link-resolver/: Cargo.toml
lambdas/link-resolver/src/: main.rs
lambdas/link-resolver/src/resolver/: mod.rs
lambdas/link-resolver/src/store/: mod.rs
