[package]
name = "lambda-1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.7.1"
lambda_runtime = "0.7.1"
tokio = { version = "1.17.0", features = ["full"] }
serde = "1.0.137"
serde_json = "1.0.81"
semver = "1.0.14"
url = "2.3.1"
rust-crypto = "0.2.36"
aws-sdk-dynamodb = "0.24.0"
aws-config = "0.54.1"